Adding temporary changes to Github

--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -27,38 +27,16 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
         <div class="banner" name="about-header">
-            <h1>About Us</h1>
-            <p>Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.</p>
+            <h1>Contact Us</h1>
+            <p>Here are some links under which you can contact us</p>
         </div>
-      <div style="display: flex;flex-direction: row; margin:auto">
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/jimmy.png" alt="Card image">
+      <div style="display: flex; width: 800;flex-direction: row; margin:auto">
+      <div class="card" style="width: 50%;">
         <div class="card-body">
-          <p class="title">Jimmy</p>
-          <p>Dr.</p>
-          <p class="card-text">I am the best car seller in at this company.</p>
-          <p>best@gmail.com</p>
+          <p class="title">Links</p>
+          <p class="card-text" style="color:blue;">Link 1:<br>https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley<br>Link 2:<br>https://www.amazon.com/<br>Link 3:<br>contact.com<br></p>
         </div>
       </div>
-
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/sarah.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Sarah</p>
-          <p>Professor</p>
-          <p class="card-text">Jimmy is lying, I am the most successful here</p>
-          <p>actually_thebest@gmail.com</p>
-        </div>
-      </div>
-
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/maxx.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Max</p>
-          <p>Student</p>
-          <p class="card-text">I am here for free coffee</p>
-          <p>max@gmail.com</p>
-        </div>
       </div>
     </div>
     </div>
